fix letter spacing h1,h2,logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 
 h1, h2 {
     font-family: Lato, sans-serif;
-    letter-spacing: 6px;
+    letter-spacing: 4px;
     color: #0a4e43;
 }
 
@@ -30,7 +30,7 @@ h1, h2 {
 
 #menu {
     font-size: 120%;
-    letter-spacing: 5px;
+    letter-spacing: 2px;
 }
 
 #menu, #logo {
